--- a/src/registro.css
+++ b/src/registro.css
@@ -1,7 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 
 * {
-    font-family: "Irish Grover";
+    font-family: 'Acme', sans-serif;
+}
+
+header {
+    text-align: center;
 }
 
 body {
@@ -10,31 +14,73 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    margin: 0;
 }
 
-header {
-    display: flex;
+#navBar {
+    text-align: center;
 }
 
-p {
+#navBar ul {
+    justify-content: center;
+    align-items: center;
+    list-style: none;    
+}
+
+#navBar ul li {
+    float: left;
+    font-size: 25px;
+    text-shadow: 2px 2px 2px;
+}
+
+@media (min-width: 700px) and (orientation: landscape) {
+    #navBar ul li {
+        font-size: 35px;
+    }
+}        
+
+#navBar a {
+    text-decoration: none;
+    display: block;
+    padding: 12px 16px;
+}
+
+@media only screen and (max-width: 600px) {
+    #description {
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 40px;
+        width: 25%;
+        height: 100%;
+    }
+}
+
+#description {
     text-align: center;
     margin-top: 50px;
-    font-size: 22px;
-    font-family: "Irish Grover";
-    color: rgb(16, 95, 243);
+    margin-left: 600px;
+    font-size: 50px;
+    color: rgb(1, 19, 20);
     background-color: white;
-    max-width: 300px;
+    width: 35%;
     border-radius: 15px;
 }
 
-.signUpForm {
-    display: flex;
-    background-color: white;
+.signUpForm, .signInForm {
+    background-color: rgb(55, 221, 243);
     max-width: 250px;
-    margin: 0 auto;
+    margin-top: 20%;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 15px;
     padding: 15px;
+    border-color:rgb(25, 133, 141);
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.6);
+}
+
+@media (min-width: 700px) and (orientation: landscape) {
+    .signUpForm, .signInForm {
+        margin-top: 5%;
+    }
 }
 
 h1 {
@@ -54,14 +100,15 @@ input {
     border-right: none;
     border-bottom: 1px solid #c4c4c4;
     width: 240px;
+    border-radius: 5px;
   }
 
 input:focus {
     outline: none;
 }  
 
-#record {
-    margin-left: 30%;
+#record, #signInBtn {
+    margin-left: 36%;
 }
 
 .question {
@@ -70,4 +117,7 @@ input:focus {
 
 button {
     font-size: 15px;
+    border-radius: 5px;
+    background-color: rgb(21, 174, 185);
+    border: rgba(0, 0, 0, 0.2);
 }
