--- a/src/styles.css
+++ b/src/styles.css
@@ -146,3 +146,26 @@ button {
     width: 100%;
     border-radius: 15px;
 }
+
+.overlay {
+    background: rgba(0,0,0,.5);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: none
+}
+
+.editModal {
+    background-color: rgb(55, 221, 243);
+    max-width: 250px;
+    margin-left: 0 auto;
+    margin-right: 0 auto;
+    border-radius: 15px;
+    padding: 15px;
+    border-color:rgb(25, 133, 141);
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.6);
+    position: absolute;
+    display: none;
+}
